--- a/Html/css/test.css
+++ b/Html/css/test.css
@@ -7,7 +7,7 @@ body{
 .container{
 	padding-right: 10%;
 	padding-left: 10%;
-	height: 100vh;
+	height: 100 %;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	background-color: gray;
@@ -19,4 +19,31 @@ header {
 	font-weight: bold;
 	/*padding-top: 1%;*/
 	font-size: 2em;
+}
+
+p.dotted {border-style: dotted;}
+p.dashed {border-style: dashed;}
+p.solid {border-style: solid;}
+p.double {border-style: double;}
+p.groove {border-style: groove;}
+p.ridge {border-style: ridge;}
+p.inset {border-style: inset;}
+p.outset {border-style: outset;}
+p.none {border-style: none;}
+p.hidden {border-style: hidden;}
+p.mix {border-style: dotted dashed solid double;}
+
+p {
+  border-top-style: dotted;
+  border-right-style: solid;
+  border-bottom-style: dotted;
+  border-left-style: solid;  
+  border-radius: 6px;
+
+}
+p {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
 }
