--- a/Html/css/test.css
+++ b/Html/css/test.css
@@ -2,6 +2,7 @@ body{
 	padding-left: 10%;
 	padding-right: 10%;
 	/*padding-bottom: 10%;*/
+	height: 100%;
 }
 
 .container{
@@ -42,8 +43,8 @@ p {
 
 }
 p {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-right: 150px;
-  margin-left: 80px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  margin-left: 8px;
 }
