--- a/rails/alpha-blog/app/views/user/user_list.html.erb
+++ b/rails/alpha-blog/app/views/user/user_list.html.erb
@@ -6,8 +6,15 @@
   </head>
   <body>
     <h1>Welcome This is the index page of Alpha-Blog</h1>
-    <p>To go to the about page click here</p>
-    <%= link_to 'About', about_path %>
-    <%= link_to 'Users', user_path %>
+    <p>All Users here.</p>
+
+    <% for user in @user %>
+      <span>Name:</span> <%= user.name %>
+      <br>
+      <br>
+    <% end %>
+
+    <%= link_to 'Home', root_path%>
+
   </body>
 </html>
