--- a/rails/alpha-blog/app/views/user/user_list.html.erb
+++ b/rails/alpha-blog/app/views/user/user_list.html.erb
@@ -8,7 +8,7 @@
     <h1>Welcome This is the index page of Alpha-Blog</h1>
     <p>All Users here.</p>
 
-    <% for user in @user %>
+    <% for user in @users %>
       <span>Name:</span> <%= user.name %>
       <br>
       <br>
