--- a/rails/alpha-blog/app/views/welcome/index.html.erb
+++ b/rails/alpha-blog/app/views/welcome/index.html.erb
@@ -8,6 +8,6 @@
     <h1>Welcome This is the index page of Alpha-Blog</h1>
     <p>To go to the about page click here</p>
     <%= link_to 'About', about_path %>
-    <%= link_to 'Users', user_path %>
+    <%= link_to 'Users list', user_path %>
   </body>
 </html>
