--- a/rails/alpha-blog/app/views/user/show.html.erb
+++ b/rails/alpha-blog/app/views/user/show.html.erb
@@ -11,7 +11,9 @@
     <span>Name: </span> <%= @user.name %> <br>
     <span>Username: </span> <%= @user.username %> <br>
     <span>Email: </span> <%= @user.email %> <br>
-    
+    <%= link_to 'Delete this user', "delete/#{@user.id}" %>
+
+
     <%= link_to 'Back to list', user_path%>
 
   </body>
