--- a/rails/alpha-blog/app/views/welcome/index.html.erb
+++ b/rails/alpha-blog/app/views/welcome/index.html.erb
@@ -9,5 +9,6 @@
     <p>To go to the about page click here</p>
     <%= link_to 'About', about_path %>
     <%= link_to 'Users list', user_path %>
+    <%= link_to 'Create User', new_user_path %>
   </body>
 </html>
