--- a/rails/alpha-blog/app/views/user/user_list.html.erb
+++ b/rails/alpha-blog/app/views/user/user_list.html.erb
@@ -9,7 +9,7 @@
     <p>All Users here.</p>
 
     <% for user in @users %>
-      <span>Name: </span><%= link_to user.name , show_user_path(:id => user.id)  %>
+      <span>Name: </span><%= link_to user.name , show_user_path(:id => user.id)  %>&nbsp&nbsp&nbsp<%= link_to 'Edit', edit_user_path(:id => user.id)  %>
       <br>
       <br>
     <% end %>
