Feat: Editing address of user

--- a/rails/alpha-blog/app/views/addresses/edit.html.erb
+++ b/rails/alpha-blog/app/views/addresses/edit.html.erb
@@ -1,2 +1,13 @@
 <h1>Addresses#edit</h1>
-<p>Find me in app/views/addresses/edit.html.erb</p>
+<%= form_for @address,url: {action: "update" }  do |f| %>
+  <p>Street:</p>
+  <%= f.text_field :street %>
+  <p>City:</p>
+  <%= f.text_field :city %>
+  <p>Country:</p>
+  <%= f.text_field :country %>
+
+  <%= hidden_field_tag :user_id , @user.id %>
+  <br>
+  <%= f.submit "Update" %>
+<% end %>
