--- a/rails/alpha-blog/app/views/user/show.html.erb
+++ b/rails/alpha-blog/app/views/user/show.html.erb
@@ -11,6 +11,10 @@
     <span>Name: </span> <%= @user.name %> <br>
     <span>Username: </span> <%= @user.username %> <br>
     <span>Email: </span> <%= @user.email %> <br>
+    <span>Address: </span> <%= "#{@user.address.street}, #{@user.address.city}, #{@user.address.country}" %> <br>
+    <%= link_to 'update address', edit_addresses_path(:id => @user.id) %>
+    <br>
+    <br>
     <%= link_to 'Delete this user', delete_user_path(:id => @user.id) %>
 
 
