--- a/rails/alpha-blog/app/views/addresses/delete.html.erb
+++ b/rails/alpha-blog/app/views/addresses/delete.html.erb
@@ -1,2 +1,2 @@
-<h1>Addresses#delete</h1>
-<p>Find me in app/views/addresses/delete.html.erb</p>
+<h1>Successfully deleted!</h1>
+<%= link_to 'Home', root_path%>
