--- a/rails/alpha-blog/app/views/user/show.html.erb
+++ b/rails/alpha-blog/app/views/user/show.html.erb
@@ -11,9 +11,15 @@
     <span>Name: </span> <%= @user.name %> <br>
     <span>Username: </span> <%= @user.username %> <br>
     <span>Email: </span> <%= @user.email %> <br>
+    <% if @user.address %>
     <span>Address: </span> <%= "#{@user.address.street}, #{@user.address.city}, #{@user.address.country}" %> <br>
+
     <%= link_to 'update address', edit_addresses_path(:id => @user.id) %>
     <br>
+    <%= link_to 'Delete address', delete_addresses_path(:id => @user.address.id) %>
+    <% else %>
+    <%= link_to 'Create address', new_address_path(:id => @user.id) %>
+    <% end %>
     <br>
     <%= link_to 'Delete this user', delete_user_path(:id => @user.id) %>
 
