changed url: action handler in rails form

--- a/rails/alpha-blog/app/views/user/edit.html.erb
+++ b/rails/alpha-blog/app/views/user/edit.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'Home', root_path%>
 <h1>Edit User</h1>
-<%= form_for @user,url: {action: "update" }  do |f| %>
+<%= form_for @user,url: update_user_path, method: :patch  do |f| %>
   <p>Name:</p>
   <%= f.text_field :name %>
   <p>Username:</p>
