--- a/rails/alpha-blog/app/views/posts/index.html.erb
+++ b/rails/alpha-blog/app/views/posts/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+
+<% if @posts.length > 0 %>
+  <% @posts.each do |post| %>
+    <%= post.id %>
+  <% end %>
+  <% else %>
+    <p>There are no posts right now</p>
+    <p>try to create one.</p>
+<% end%>
