--- a/rails/alpha-blog/app/views/user/show.html.erb
+++ b/rails/alpha-blog/app/views/user/show.html.erb
@@ -25,6 +25,8 @@
 
 
     <%= link_to 'Back to list', user_path%>
-
+    <br>
+    <br>
+    <%= link_to 'See all Posts of this User', posts_index_path(:id => @user.id)  %>
   </body>
 </html>
