--- a/rails/alpha-blog/app/views/posts/new.html.erb
+++ b/rails/alpha-blog/app/views/posts/new.html.erb
@@ -1,2 +1,7 @@
 <h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<%= form_for @post, url: posts_create_path(:id => @user.id) do |f|  %>
+  <%= f.text_field :body %>
+  <br>
+
+  <%= f.submit 'Create' %>
+<% end %>
