Bug: edit not working

--- a/rails/alpha-blog/app/views/posts/show.html.erb
+++ b/rails/alpha-blog/app/views/posts/show.html.erb
@@ -1,3 +1,6 @@
 <h1>Posts#show</h1>
 <p>Find me in app/views/posts/show.html.erb</p>
 <%= @post.body %>
+<br>
+<%= link_to 'Edit this post',posts_edit_path(:id => @post.id)  %>
+<%= link_to 'Delete this post',posts_delete_path(:id => @post.id)  %>
