delete template redirecting error

--- a/rails/alpha-blog/app/views/posts/show.html.erb
+++ b/rails/alpha-blog/app/views/posts/show.html.erb
@@ -3,4 +3,4 @@
 <%= @post.body %>
 <br>
 <%= link_to 'Edit this post',posts_edit_path(:id => @post.id)  %>
-<%= link_to 'Delete this post',posts_delete_path(:id => @post.id)  %>
+<%= link_to 'Delete this post',posts_delete_path(:id => @post.id), method: :delete  %>
