--- a/rails/alpha-blog/app/views/posts/show.html.erb
+++ b/rails/alpha-blog/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Posts#show</h1>
 <p>Find me in app/views/posts/show.html.erb</p>
+id :<%= @post.id %>
+<br>
 <%= @post.body %>
 <br>
 <%= link_to 'Edit this post',posts_edit_path(:id => @post.id)  %>
