--- a/rails/alpha-blog/app/views/event/index.html.erb
+++ b/rails/alpha-blog/app/views/event/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Event#index</h1>
-<p>Find me in app/views/event/index.html.erb</p>
+<% @events.each do |event| %>
+  <br>
+  <%= event.id %>
+  <%= event.title %>
+
+<% end %>
+<br>
+<%= link_to "Create new event", event_new_path %>
