--- a/rails/alpha-blog/app/views/event/new.html.erb
+++ b/rails/alpha-blog/app/views/event/new.html.erb
@@ -1,2 +1,5 @@
 <h1>Event#new</h1>
-<p>Find me in app/views/event/new.html.erb</p>
+<%= form_for @event, url: event_create_path, method: :post do |f|  %>
+  <%= f.text_field :title %>
+  <%= f.submit "Create" %>
+<% end %>
