--- a/rails/alpha-blog/app/views/event/edit.html.erb
+++ b/rails/alpha-blog/app/views/event/edit.html.erb
@@ -1,2 +1,5 @@
 <h1>Event#edit</h1>
-<p>Find me in app/views/event/edit.html.erb</p>
+<%= form_for @event, url: event_update_path(:e_id => @event.id), method: :patch do |f|  %>
+  <%= f.text_field :title %>
+  <%= f.submit "Update" %>
+<% end %>
