--- a/rails/alpha-blog/app/views/event/show.html.erb
+++ b/rails/alpha-blog/app/views/event/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Event#show</h1>
-<p>Find me in app/views/event/show.html.erb</p>
+<% if @events.any? %>
+  <% @events.each do |event| %>
+    <%= event.title %>
+    <br>
+  <% end %>
+  <% else %>
+    <p>There are no events</p>
+<% end %>
