--- a/rails/alpha-blog/app/views/layouts/application.html.erb
+++ b/rails/alpha-blog/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
         <li>
           <%= link_to "Users list", user_path  %>
         </li>
+        <li>
+          <%= link_to "Events list", event_index_path %>
+        </li>
       </ul>
 
     </div>
