--- a/rails/alpha-blog/app/views/user/show.html.erb
+++ b/rails/alpha-blog/app/views/user/show.html.erb
@@ -21,3 +21,4 @@
     <br>
     <br>
     <%= link_to 'See all Posts of this User', posts_index_path(:id => @user.id)  %>
+    <%= link_to 'See all events for this user', event_show_path(:u_id => @user.id) %>
