--- a/rails/alpha-blog/app/views/user/show.html.erb
+++ b/rails/alpha-blog/app/views/user/show.html.erb
@@ -15,10 +15,10 @@
     <% end %>
     <br>
     <%= link_to 'Delete this user', delete_user_path(:id => @user.id) %>
-
+    &nbsp &nbsp
 
     <%= link_to 'Back to list', user_path%>
     <br>
     <br>
-    <%= link_to 'See all Posts of this User', posts_index_path(:id => @user.id)  %>
+    <%= link_to 'See all Posts of this User', posts_index_path(:id => @user.id)  %> &nbsp &nbsp
     <%= link_to 'See all events for this user', event_show_path(:u_id => @user.id) %>
