--- a/rails/alpha-blog/app/views/user/new.html.erb
+++ b/rails/alpha-blog/app/views/user/new.html.erb
@@ -8,7 +8,11 @@
       <p>Email:</p>
       <%= f.text_field :email %>
       <p>Gender</p>
-      <%= f.text_field :gender %>
+
+      <%= radio_button_tag(:gender, "male") %>
+      <%= label_tag(:gender, "Male") %>
+      <%= radio_button_tag(:gender, "female") %>
+      <%= label_tag(:gender, "Female") %>
       <p>Phone number:</p>
       <%= f.text_field :ph_no %>
       <br>
