--- a/rails/alpha-blog/app/views/user/edit.html.erb
+++ b/rails/alpha-blog/app/views/user/edit.html.erb
@@ -1,16 +1,3 @@
 <%= link_to 'Home', root_path%>
 <h1>Edit User</h1>
-<%= form_for @user,url: update_user_path, method: :patch  do |f| %>
-  <p>Name:</p>
-  <%= f.text_field :name %>
-  <p>Username:</p>
-  <%= f.text_field :username %>
-  <p>Email:</p>
-  <%= f.text_field :email %>
-  <p>Gender</p>
-  <%= f.text_field :gender %>
-  <p>Phone number:</p>
-  <%= f.text_field :ph_no %>
-  <br>
-  <%= f.submit "Update" %>
-<% end %>
+<%= render 'form' %>
