--- a/rails/alpha-blog/app/views/user/new.html.erb
+++ b/rails/alpha-blog/app/views/user/new.html.erb
@@ -1,20 +1,3 @@
     <%= link_to 'Home', root_path%>
     <h1>Create a User</h1>
-    <%= form_for @user,url: {action: "create" }  do |f| %>
-      <p>Name:</p>
-      <%= f.text_field :name %>
-      <p>Username:</p>
-      <%= f.text_field :username %>
-      <p>Email:</p>
-      <%= f.text_field :email %>
-      <p>Gender</p>
-
-      <%= radio_button_tag(:gender, "male") %>
-      <%= label_tag(:gender, "Male") %>
-      <%= radio_button_tag(:gender, "female") %>
-      <%= label_tag(:gender, "Female") %>
-      <p>Phone number:</p>
-      <%= f.text_field :ph_no %>
-      <br>
-      <%= f.submit "Create" %>
-    <% end %>
+    <%= render 'form' %>
