--- a/rails/alpha-blog/app/views/posts/edit.html.erb
+++ b/rails/alpha-blog/app/views/posts/edit.html.erb
@@ -1,8 +1,3 @@
 <h1>Posts#edit</h1>
 <p>Find me in app/views/posts/edit.html.erb</p>
-<%= form_for @post, url: posts_update_url(:id => @post.id), method: :patch do |f|  %>
-  <%= f.text_field :body %>
-  <br>
-
-  <%= f.submit 'Edit' %>
-<% end %>
+<%= render 'form' %>
