--- a/rails/alpha-blog/app/views/posts/_form.html.erb
+++ b/rails/alpha-blog/app/views/posts/_form.html.erb
@@ -2,5 +2,5 @@
 <%= form_for @post, url: params[:action] == "new" ? posts_create_path(:id => @user.id) : posts_update_url(:id => @post.id) do |f|  %>
   <%= f.text_field :body %>
   <br>
-  <%= f.submit 'Create' %>
+  <%= f.submit 'Submit' %>
 <% end %>
