--- a/rails/alpha-blog/app/views/user/_form.html.erb
+++ b/rails/alpha-blog/app/views/user/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user,url: params[:action] == "new" ? create_user_path : update_user_path  do |f| %>
+<%= form_for @user,url: params[:action] == "new" ? create_user_path : update_user_path, remote: true  do |f| %>
   <p>Name:</p>
   <%= f.text_field :name %>
   <p>Username:</p>
