--- a/rails/alpha-blog/app/views/welcome/index.html.erb
+++ b/rails/alpha-blog/app/views/welcome/index.html.erb
@@ -9,6 +9,10 @@
     <p>To go to the about page click here</p>
     <%= link_to 'About', about_path %>
     <%= link_to 'Users list', user_path %>
-    <%= link_to 'Create User', new_user_path %>
+    <%= link_to 'Create User', new_user_path, remote: true %>
+    <br>
+    <div class="aj">
+      dfg
+    </div>
   </body>
 </html>
