--- a/rails/alpha-blog/app/views/user/user_list.html.erb
+++ b/rails/alpha-blog/app/views/user/user_list.html.erb
@@ -3,9 +3,8 @@
     <p>All Users here.</p>
 
     <% for user in @users %>
-      <span>Name: </span><%= link_to user.name , show_user_path(:id => user.id)  %>&nbsp&nbsp&nbsp<%= link_to 'Edit', edit_user_path(:id => user.id)  %>
+      <span>Name: </span><%= link_to user.name , show_user_path(:id => user.id)  %>&nbsp&nbsp&nbsp<%= link_to 'Edit', edit_user_path(:id => user.id)  %>    &nbsp &nbsp
+      <%= link_to 'Delete this user', delete_user_path(:id => user.id) %>
       <br>
       <br>
     <% end %>
-
-    
