--- a/rails/alpha-blog/app/views/layouts/application.html.erb
+++ b/rails/alpha-blog/app/views/layouts/application.html.erb
@@ -17,14 +17,27 @@
           <%= link_to "Home", root_path %>
         </li>
         <li>
-          <%= link_to "Users list", user_path  %>
+          <%= link_to 'Users list', user_path, remote: true %>
         </li>
         <li>
           <%= link_to "Events list", event_index_path %>
         </li>
+        <li>
+          <%= link_to 'Create User', new_user_path, remote: true %>
+        </li>
       </ul>
 
     </div>
+    <p>To go to the about page click here</p>
+    <%= link_to 'About', about_path %>
+
+
+    <br>
     <%= yield %>
+
+    <div class="aj">
+      
+    </div>
+
   </body>
 </html>
