--- a/rails/alpha-blog/app/views/user/_show.html.erb
+++ b/rails/alpha-blog/app/views/user/_show.html.erb
@@ -1,4 +1,3 @@
-    <h1>Welcome This is the page of Alpha-Blog</h1>
     <p>User here.</p>
 
     <span>Name: </span> <%= @user.name %> <br>
@@ -7,7 +6,7 @@
     <% if @user.address %>
     <span>Address: </span> <%= "#{@user.address.street}, #{@user.address.city}, #{@user.address.country}" %> <br>
 
-    <%= link_to 'update address', edit_addresses_path(:id => @user.id) %>
+    <%= link_to 'update address', edit_addresses_path(:id => @user.id), remote: true %>
     <br>
     <%= link_to 'Delete address', delete_addresses_path(:id => @user.address.id) %>
     <% else %>
