Style added in application html erb

--- a/rails/alpha-blog/app/views/layouts/application.html.erb
+++ b/rails/alpha-blog/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <div class="header" >
 
       <ul>
         <li>
@@ -35,8 +35,8 @@
     <br>
     <%= yield %>
 
-    <div class="aj">
-      
+    <div class="aj" style="background : #d9d9d9">
+
     </div>
 
   </body>
