ajax js files in user view

--- a/rails/alpha-blog/app/views/layouts/application.html.erb
+++ b/rails/alpha-blog/app/views/layouts/application.html.erb
@@ -36,7 +36,12 @@
     <%= yield %>
 
     <div class="aj" style="background : #d9d9d9">
+      <div class="main">
 
+      </div>
+      <div class="attr">
+
+      </div>
     </div>
 
   </body>
