BUG not working not adding users rather than goes to update

--- a/rails/alpha-blog/app/views/user/_form.html.erb
+++ b/rails/alpha-blog/app/views/user/_form.html.erb
@@ -1,3 +1,4 @@
+<%# debugger %>
 <%= form_for @user,url: params[:action] == "new" ? create_user_path : update_user_path, remote: true  do |f| %>
   <p>Name:</p>
   <%= f.text_field :name %>
