--- a/rails/alpha-blog/app/views/welcome/about.html.erb
+++ b/rails/alpha-blog/app/views/welcome/about.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome This is the About page of Alpha-Blog</h1>
 <p>To go back to the Home page click here</p>
-<%= link_to 'Home', root_path%>
+<%# link_to 'Home', root_path%>
