--- a/rails/Devise_demo_project/app/views/layouts/application.html.erb
+++ b/rails/Devise_demo_project/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <%= render 'shared/nav' %>
   <body>
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
