--- a/rails/Book_Store/app/views/book/index.html.erb
+++ b/rails/Book_Store/app/views/book/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Book#index</h1>
-<p>Find me in app/views/book/index.html.erb</p>
+<% if @books.any? %>
+  <% @books.each do |book| %>
+    Name: <%= book.name %> &nbsp &nbsp <%= link_to 'View', book_view_path(:id => book.id) %> <br>
+  <% end %>
+  <% else %>
+  Nothing here now.
+<% end %>
