--- a/rails/Book_Store/app/views/book/view.html.erb
+++ b/rails/Book_Store/app/views/book/view.html.erb
@@ -1,2 +1,5 @@
 <h1>Book#view</h1>
-<p>Find me in app/views/book/view.html.erb</p>
+
+Name : <%= @book.name %> <br>
+price : <%= @book.price %> <br>
+author : <%= @book.user.email %>
