--- a/rails/Book_Store/app/views/book/new.html.erb
+++ b/rails/Book_Store/app/views/book/new.html.erb
@@ -1,2 +1,11 @@
 <h1>Book#new</h1>
-<p>Find me in app/views/book/new.html.erb</p>
+<%= form_for @book,url: book_create_path  do |f| %>
+  <p>Name:</p>
+  <%= f.text_field :name %>
+  <p>Price</p>
+  <%= f.number_field :price %>
+
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+
+  <%= f.submit "Submit" %>
+<% end %>
