--- a/rails/Book_Store/app/views/layouts/application.html.erb
+++ b/rails/Book_Store/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <%= link_to 'Home', root_path %>
+    <% if user_signed_in? %>
+      <%= link_to "#{current_user.email}", edit_user_registration_path %> <br>
+      <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> <br>
+
+    <% else %>
+      <%= link_to 'Sign Up', new_user_registration_path %> <br>
+      <%= link_to 'Sign In' , new_user_session_path %> <br>
+    <% end %>
+
+
+
     <%= yield %>
   </body>
 </html>
