minor change added space bw link tags

--- a/rails/Book_Store/app/views/layouts/application.html.erb
+++ b/rails/Book_Store/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <%= link_to 'Home', root_path %>
+    <%= link_to 'Home', root_path %> &nbsp &nbsp
     <% if user_signed_in? %>
       <%= link_to "#{current_user.email}", edit_user_registration_path %> <br>
       <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> <br>
