Pagination added for the books

--- a/rails/Book_Store/app/views/book/current.html.erb
+++ b/rails/Book_Store/app/views/book/current.html.erb
@@ -1,6 +1,8 @@
 <h1>Book#index</h1>
 <%= link_to 'Create Book', book_new_path() %>
 <br>
+<%= link_to 'View all books', root_path %>
+<%= will_paginate @books %>
 <% if @books.any? %>
   <% @books.each do |book| %>
     Name: <%= book.name %> &nbsp &nbsp <%= link_to 'View', book_view_path(:id => book.id) %> <br>
