--- a/rails/Book_Store/app/views/book/index.html.erb
+++ b/rails/Book_Store/app/views/book/index.html.erb
@@ -2,11 +2,13 @@
 <%= link_to 'Create Book', book_new_path() %>
 <%= link_to 'See your own records', book_current_path %>
 <br>
-<%= will_paginate @books %>
 <% if @books.any? %>
   <% @books.each do |book| %>
     Name: <%= book.name %> &nbsp &nbsp <%= link_to 'View', book_view_path(:id => book.id) %> <br>
   <% end %>
   <% else %>
+
   Nothing here now.
 <% end %>
+<%= will_paginate @books,previous_label:"Previous", next_label:"Next", inner_window: 1, outer_window: -2 %>
+<p class="test"></p>
