--- a/rails/Uploader_Management/app/views/photos/_photo.html.erb
+++ b/rails/Uploader_Management/app/views/photos/_photo.html.erb
@@ -1,7 +1,8 @@
 <div class="media">
   <div class="media-left">
     <%= link_to image_tag(photo.image.url(:thumb), class: 'media-object'), photo.image.url, target: '_blank' %>
-
+    <%= link_to image_tag(photo.image.url(:cropped), class: 'media-object'), photo.image.url, target: '_blank' %>
+    <%= photo.image.url(:cropped) %>
   </div>
   <div class="media-body">
     <h4 class="media-heading"><%= photo.title %></h4>
