--- a/rails/Uploader_Management/app/views/layouts/application.html.erb
+++ b/rails/Uploader_Management/app/views/layouts/application.html.erb
@@ -10,20 +10,23 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <%= link_to 'Simple Uploader', root_path, class: 'navbar-brand' %>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <%= link_to 'Simple Uploader', root_path, class: 'navbar-brand' %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
             <li><%= link_to 'Photos', root_path %></li>
+          </li>
+          <li class="nav-item">
             <li><%= link_to 'Upload Your Photo', new_photo_path %></li>
-          </ul>
-        </div>
+          </li>
+        </ul>
       </div>
     </nav>
-
     <%= yield %>
   </body>
 </html>
