Bootstrap navbar added and setted up links

--- a/rails/Book_Store/app/views/book/index.html.erb
+++ b/rails/Book_Store/app/views/book/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Book#index</h1>
-<%= link_to 'Create Book', book_new_path() %>
+<%# link_to 'Create Book', book_new_path() %>
 <%= link_to 'See your own records', book_current_path %>
 <br>
 <% if @books.any? %>
