--- a/rails/Book_Store/app/views/book/current.html.erb
+++ b/rails/Book_Store/app/views/book/current.html.erb
@@ -1,5 +1,5 @@
-<h1>Book#index</h1>
-<%= link_to 'Create Book', book_new_path() %>
+<h1>Book#current_user</h1>
+<%# link_to 'Create Book', book_new_path() %>
 <br>
 <%= link_to 'View all books', root_path %>
 
