--- a/rails/Book_Store/app/views/book/index.html.erb
+++ b/rails/Book_Store/app/views/book/index.html.erb
@@ -10,4 +10,4 @@
 
   Nothing here now.
 <% end %>
-<%= will_paginate @books,previous_label:"Previous", next_label:"Next", inner_window: 1, outer_window: -2 %>
+<%= will_paginate @books,previous_label:"Previous", next_label:"Next", inner_window: 1, outer_window: -2, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
