--- a/rails/shop_management/app/views/products/index.html.erb
+++ b/rails/shop_management/app/views/products/index.html.erb
@@ -1,28 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
+<%= form_tag url: search_path, remote: true %>
+  <%= text_field_tag :search_str, '' %>
+  <%= submit_tag 'Send' %>
+<% end %>
+  <table>
+    <thead>
       <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Price</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <%= render partial: 'list' %>
+    </tbody>
+  </table>
 <%= will_paginate @posts %>
 
 
