--- a/rails/shop_management/app/views/products/index.html.erb
+++ b/rails/shop_management/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
-<%= form_tag url: search_path, remote: true %>
-  <%= text_field_tag :search_str, '' %>
-  <%= submit_tag 'Send' %>
+<%= form_tag url: search_path, remote: true do %>
+  <%= text_field_tag :search_str %>
+  <%# submit_tag 'Send' %>
 <% end %>
   <table>
     <thead>
@@ -13,14 +13,40 @@
         <th colspan="3"></th>
       </tr>
     </thead>
-
-    <tbody>
+<br>
+    <tbody id= "products-data">
       <%= render partial: 'list' %>
     </tbody>
   </table>
-<%= will_paginate @posts %>
 
 
 <br>
 
+<br>
+
 <%= link_to 'New Product', new_product_path %>
+<script>
+	// $("#search_str").change(function(){
+	// 	val = $(this).val();
+	// 	$.ajax({
+	// 	  method: 'POST',
+	// 	  url: "/books/search?search_str="+val,
+	// 	  cache: false,
+	// 	  success: function(html){
+	// 	    //$("#results").append(html);
+	// 	  }
+	// 	});
+	// })
+
+  $("#search_str").change(function() {val = $(this).val();
+                                      $.ajax({
+                                        method: 'get',
+                                        url: "products/search?search_str="+val,
+                                        cache: false,
+                                        success: function(html){
+                                          //$("#results").append(html);
+                                        }
+                                      });
+                                    }
+                          )
+</script>
