--- a/rails/shop_management/app/views/products/index.html.erb
+++ b/rails/shop_management/app/views/products/index.html.erb
@@ -8,8 +8,11 @@
   <table>
     <thead>
       <tr>
-        <th>Name <%= link_to ' asc ', search_path(sort_cat: 'name', sort_type: 'asc'), remote: true %>|<%= link_to ' desc ', search_path(sort_cat: 'name', sort_type: 'desc'), remote: true %> </th>
+        <!-- <th>Name <%= link_to ' asc ', search_path(sort_cat: 'name', sort_type: 'asc'), remote: true %>|<%= link_to ' desc ', search_path(sort_cat: 'name', sort_type: 'desc'), remote: true %> </th>
         <th>Price<%= link_to ' asc ',search_path(sort_cat: 'price', sort_type: 'asc'), remote: true %>|<%= link_to ' desc ', search_path(sort_cat: 'Price', sort_type: 'desc'), remote: true %></th>
+        <th colspan="3"></th> -->
+        <th >Name <span id= "name_asc"> asc </span>|<span id= "name_desc"> desc </span> </th>
+        <th >Price <span id= "price_asc"> asc </span>|<span id= "price_desc"> desc </span></th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -51,4 +54,50 @@
                                       });
                                     }
                           )
+  $("#name_asc").click(function() {val = $(search_str).val();
+                                      $.ajax({
+                                        method: 'get',
+                                        url: "products/search?search_str="+val+"&sort_cat=name&sort_type=asc",
+                                        cache: false,
+                                        success: function(html){
+                                          //$("#results").append(html);
+                                        }
+                                      });
+                                    }
+                          )
+  $("#name_desc").click(function() {val = $(search_str).val();
+                                      $.ajax({
+                                        method: 'get',
+                                        url: "products/search?search_str="+val+"&sort_cat=name&sort_type=desc",
+                                        cache: false,
+                                        success: function(html){
+                                          //$("#results").append(html);
+                                        }
+                                      });
+                                    }
+                          )
+  $("#price_asc").click(function() {val = $(search_str).val();
+                                      $.ajax({
+                                        method: 'get',
+                                        url: "products/search?search_str="+val+"&sort_cat=price&sort_type=asc",
+                                        cache: false,
+                                        success: function(html){
+                                          //$("#results").append(html);
+                                        }
+                                      });
+                                    }
+                          )
+  $("#price_desc").click(function() {val = $(search_str).val();
+                                      $.ajax({
+                                        method: 'get',
+                                        url: "products/search?search_str="+val+"&sort_cat=price&sort_type=desc",
+                                        cache: false,
+                                        success: function(html){
+                                          //$("#results").append(html);
+                                        }
+                                      });
+                                    }
+                          )
+
+
 </script>
