--- a/rails/Book_Store/app/views/layouts/application.html.erb
+++ b/rails/Book_Store/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
             <%= link_to "#{current_user.email}", edit_user_registration_path, class: "btn btn-outline-success my-2 my-sm-0" %> <br>
             <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-outline-success my-2 my-sm-0" %> <br>
           <% else %>
+            <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+
             <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-outline-success my-2 my-sm-0" %>
             <%= link_to 'Sign In' , new_user_session_path, class: "btn btn-outline-success my-2 my-sm-0" %> <br>
           <% end %>
