class sort added

--- a/rails/shop_management/app/views/products/index.html.erb
+++ b/rails/shop_management/app/views/products/index.html.erb
@@ -8,8 +8,8 @@
   <table>
     <thead>
       <tr>
-        <th >Name <span id= "name_asc"> asc </span>|<span id= "name_desc"> desc </span> </th>
-        <th >Price <span id= "price_asc"> asc </span>|<span id= "price_desc"> desc </span></th>
+        <th >Name <span class="sort" id= "name_asc"> asc </span>|<span class="sort" id= "name_desc"> desc </span> </th>
+        <th >Price <span class="sort" id= "price_asc"> asc </span>|<span class="sort" id= "price_desc"> desc </span></th>
         <th colspan="3"></th>
       </tr>
     </thead>
