--- a/rails/slim_temp/app/views/welcome/_index.html.slim
+++ b/rails/slim_temp/app/views/welcome/_index.html.slim
@@ -1,1 +1,11 @@
 h1 Home Partial
+body
+  / p
+    |
+      This is a test of the text block.
+
+  p
+    | This line is on the left margin.
+       This line will have one space in front of it.
+         This line will have two spaces in front of it.
+           And so on..
