slim with ruby code if else and each loop

--- a/rails/slim_temp/app/views/welcome/_about.html.slim
+++ b/rails/slim_temp/app/views/welcome/_about.html.slim
@@ -1,2 +1,9 @@
 h1 About Page
 p this is a partial page(_about)
+
+- if @articles.empty?
+    | No inventory
+- else
+  ol
+    - @articles.each do |article|
+      li #{article}
