--- a/rails/slim_temp/app/views/posts/new.html.slim
+++ b/rails/slim_temp/app/views/posts/new.html.slim
@@ -1,2 +1,13 @@
 h1 Posts#new
 p Find me in app/views/posts/new.html.slim
+= form_for @post,url: posts_create_path  do |f|
+  div.field
+  = f.label :title
+  br
+  = f.text_field :title
+  div.field
+  = f.label :body
+  br
+  = f.text_area :body
+  div.actions
+  = f.submit
