--- a/rails/slim_temp/app/views/welcome/_contact_us.html.slim
+++ b/rails/slim_temp/app/views/welcome/_contact_us.html.slim
@@ -1,2 +1,15 @@
 h1 Contact_us Page
 p this is a partial page (_contact_us)
+
+
+= form_for @post,url: posts_create_path  do |f|
+  div.field
+  = f.label :title
+  br
+  = f.text_field :title
+  div.field
+  = f.label :body
+  br
+  = f.text_area :body
+  div.actions
+  = f.submit
