--- a/rails/slim_temp/app/views/welcome/_index.html.slim
+++ b/rails/slim_temp/app/views/welcome/_index.html.slim
@@ -4,8 +4,5 @@ body
     |
       This is a test of the text block.
 
-  p
-    | This line is on the left margin.
-       This line will have one space in front of it.
-         This line will have two spaces in front of it.
-           And so on..
+  p menu 1 contains data
+  p you can add data from menu 2
