--- a/rails/slim_temp/app/views/welcome/_about.html.slim
+++ b/rails/slim_temp/app/views/welcome/_about.html.slim
@@ -13,4 +13,7 @@ h4 below are the posts
 - else
     ol
       - @posts.each do |post|
-        li #{post.title} #{post.body}
+        li
+          | <b>#{post.title}</b>: #{post.body}
+        = link_to posts_delete_path(:id => post.id ), method: :delete do
+          = 'delete'
