--- a/rails/slim_temp/app/views/welcome/index.html.slim
+++ b/rails/slim_temp/app/views/welcome/index.html.slim
@@ -2,12 +2,12 @@ ul class="nav nav-tabs"
   li class="nav-item"
     a class="nav-link active" data-toggle="tab" href="#home" Home
   li class="nav-item"
-    a class="nav-link" data-toggle="tab" href="#menu1" Menu 1
+    a class="nav-link" data-toggle="tab" href="#menu1" show
 
   li class="nav-item"
-    a class="nav-link" data-toggle="tab" href="#menu2" Menu 2
+    a class="nav-link" data-toggle="tab" href="#menu2" create
 
 div class="tab-content"
   div class="tab-pane container active" id="home" =render partial: 'index'
-  div class="tab-pane container fade" id="menu1" =render partial: 'about'
-  div class="tab-pane container fade" id="menu2" =render partial: 'contact_us'
+  div class="tab-pane container fade" id="menu1" =render partial: 'show_posts'
+  div class="tab-pane container fade" id="menu2" =render partial: 'create_post'
