Added fourth tabbed div

--- a/rails/slim_temp/app/views/welcome/index.html.slim
+++ b/rails/slim_temp/app/views/welcome/index.html.slim
@@ -6,8 +6,11 @@ ul class="nav nav-tabs"
 
   li class="nav-item"
     a class="nav-link" data-toggle="tab" href="#menu2" create
+  li class="nav-item"
+    a class="nav-link" data-toggle="tab" href="#menu3" font awesome
 
 div class="tab-content"
   div class="tab-pane container active" id="home" =render partial: 'index'
   div class="tab-pane container fade" id="menu1" =render partial: 'show_posts'
   div class="tab-pane container fade" id="menu2" =render partial: 'create_post'
+  div class="tab-pane container fade" id="menu3" =render partial: 'font_awesome'
