some more slim tags

--- a/rails/slim_temp/app/views/welcome/_index.html.slim
+++ b/rails/slim_temp/app/views/welcome/_index.html.slim
@@ -16,3 +16,8 @@ h5 id="headline"
   | Welcome to my site.
 h1 id="headline"
     = page_headline
+- page_tagline = "Custom tag line"
+h2[id="tagline" class="small tagline"] = page_tagline
+a href==posts_new_path() link
+
+/! a href=="&amp;"
