--- a/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
+++ b/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
@@ -1,8 +1,16 @@
 h1 Font awesome
 
-i.fa.fa-camera-retro 
+i.fa.fa-camera-retro
 br
 <i class="fa fa-camera-retro"></i>
+br
+span
+  | fa fa-500px
+  i.fa.fa-500px
+br
 
+i.fa.fa-bitbucket
+br
+i#amazon.fa.fa-amazon
 /fa_stacked_icon "twitter", base: "square-o"
 /i.fa_stacked "terminal inverse", base: "square", class: "pull-right", text: "Hi!"
