Using font awesome icon sizing

--- a/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
+++ b/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
@@ -12,5 +12,8 @@ br
 i.fa.fa-bitbucket
 br
 i#amazon.fa.fa-amazon
+br
+i#android.fa.fa-android.fa-3x
+
 /fa_stacked_icon "twitter", base: "square-o"
 /i.fa_stacked "terminal inverse", base: "square", class: "pull-right", text: "Hi!"
