ruby code for font-awesome icon in slim

--- a/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
+++ b/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
@@ -15,5 +15,5 @@ i#amazon.fa.fa-amazon
 br
 i#android.fa.fa-android.fa-3x
 
-/fa_stacked_icon "twitter", base: "square-o"
+= fa_stacked_icon "twitter", base: "square-o"
 /i.fa_stacked "terminal inverse", base: "square", class: "pull-right", text: "Hi!"
