implemented new icons with sizing

--- a/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
+++ b/rails/slim_temp/app/views/welcome/_font_awesome.html.slim
@@ -2,18 +2,10 @@ h1 Font awesome
 
 i.fa.fa-camera-retro
 br
-<i class="fa fa-camera-retro"></i>
+= icon('fas', 'flag', class: 'fa-7x')
 br
-span
-  | fa fa-500px
-  i.fa.fa-500px
+= icon('fas', 'adjust')
 br
-
-i.fa.fa-bitbucket
-br
-i#amazon.fa.fa-amazon
-br
-i#android.fa.fa-android.fa-3x
-
-= fa_stacked_icon "twitter", base: "square-o"
+= icon('fab', 'drupal' )
+/ = fa_stacked_icon "twitter", base: "square-o"
 /i.fa_stacked "terminal inverse", base: "square", class: "pull-right", text: "Hi!"
